--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,23 +7,67 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-.main-menu {
+.navbar-container {
     width: 100%;
-    height: 120px;
+    height: 100%;
     background-color: #F5F5F5;
 }
-
-img {
-    display: inline;
-    padding-top: 20px;
-}
-
-a, li {
+  
+  nav {
+    position: relative;
+  }
+  
+  .logo {
+    width: 100px;
+    margin-top: 12px;
+    padding-left: 15px;
+  }
+  
+  .navbar-items {
+    position: absolute;
+    right: 14px;
+    height: 80px;
+    line-height: 80px;
+    margin: 0;
+    display: inline-block;
+  }
+  
+  .navbar-items li {
+    display: inline-block;
+    text-transform: uppercase;
+    margin-left: 20px;
+    text-align: center;
+  }
+  
+  .navbar-items a {
     color: #363636;
     text-decoration: none;
-    display: inline;
-}
+    transition: 0.5s;
+  }
+  
+  .navbar-items a:hover {
+    color: #ccc;
+  }
 
-.link-nav {
-    padding-left: 15px;
-}
+  .main-banner {
+    background-image: url("../img/mainbanner.png");
+    background-size: cover;
+    background-position: center;
+    padding: 10rem 0;
+  }
+  
+  .main-banner h1,
+  .main-banner p {
+    color: #fff;
+    text-align: center;
+    font-weight: bold;
+    text-shadow: #000 3px 2px 3px;
+  }
+  
+  .main-banner h1 {
+    font-size: 54px;
+  }
+  
+  .main-banner p {
+    font-size: 32px;
+  }
