--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 * {
     margin: 0;
 }
@@ -19,8 +21,8 @@ body {
   
   .logo {
     width: 100px;
-    margin-top: 12px;
-    padding-left: 15px;
+    margin-top: 10px;
+    margin-left: 50px;
   }
   
   .navbar-items {
@@ -35,8 +37,9 @@ body {
   .navbar-items li {
     display: inline-block;
     text-transform: uppercase;
-    margin-left: 20px;
-    text-align: center;
+    margin-left: 30px;
+    font-size: 18px;
+    margin-top: 10px;
   }
   
   .navbar-items a {
@@ -49,11 +52,15 @@ body {
     color: #ccc;
   }
 
+  .a1 {
+    padding: 15px;
+  }
+
   .main-banner {
-    background-image: url("../img/mainbanner.png");
-    background-size: cover;
+    background-image: url("/img/banner\ abel.jpg");
+    background-size: 100%;
     background-position: center;
-    padding: 10rem 0;
+    padding: 15%;
   }
   
   .main-banner h1,
@@ -70,4 +77,11 @@ body {
   
   .main-banner p {
     font-size: 32px;
+  }
+
+  .news {
+    text-align: center;
+    padding-top: 20px;
+    color: #F5F5F5;
+    font-size: 18px;
   }
