--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,30 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
 * {
-    margin: 0;
+  margin: 0;
 }
 
 body {
-    background-color: #363636;
-    font-family: 'Lato', sans-serif;
+  background-color: #363636;
+  font-family: "Lato", sans-serif;
 }
 
 .navbar-container {
-    width: 100%;
-    height: 100%;
-    background-color: #F5F5F5;
+  width: 100%;
+  height: 100%;
+  background-color: #f5f5f5;
 }
-  
+
 nav {
   position: relative;
 }
-  
+
 .logo {
   width: 100px;
   margin-top: 10px;
   margin-left: 50px;
 }
-  
+
 .navbar-items {
   position: absolute;
   right: 14px;
@@ -33,7 +33,7 @@ nav {
   margin: 0;
   display: inline-block;
 }
-  
+
 .navbar-items li {
   display: inline-block;
   text-transform: uppercase;
@@ -41,13 +41,13 @@ nav {
   font-size: 18px;
   margin-top: 10px;
 }
-  
+
 .navbar-items a {
   color: #363636;
   text-decoration: none;
   transition: 0.5s;
 }
-  
+
 .navbar-items a:hover {
   color: #ccc;
 }
@@ -59,7 +59,7 @@ nav {
 .slider {
   margin: 0 auto;
   width: 100%;
-  height: 450px;
+  height: 400px;
   overflow: hidden;
 }
 
@@ -101,9 +101,56 @@ nav {
   margin-left: -75%;
 }
 
-.news {
+.title-news {
   text-align: center;
-  padding-top: 20px;
-  color: #F5F5F5;
-  font-size: 18px;
+  color: #f5f5f5;
+  font-size: larger;
+  padding: 25px 0;
+}
+
+.news-list {
+  list-style: none;
+  padding: 10px 10px;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.news-item {
+  width: 30%;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  color: #363636;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.news-item a {
+  text-decoration: none;
+  color: inherit;
+  transition: 0.5s;
+
+}
+
+.news-item a:hover {
+  color: #ccc;
+}
+
+.news-item h3 {
+  font-size: 20px;
+  margin: 0 0 10px 0;
+}
+
+.news-item p {
+  font-size: 16px;
+  margin: 0;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #727272;
 }
