--- a/CSS/style.css
+++ b/CSS/style.css
@@ -147,6 +147,56 @@ nav {
   margin: 0;
 }
 
+.rodape {
+  background-color: #f5f5f5;
+  color: #363636;
+  height: auto;
+  width: 100%;
+  font-size: 16px;
+}
+.rodape a {
+  text-decoration: none;
+  color: #363636;
+}
+.rodape p {
+  margin-bottom: 5px;
+}
+.rodape-div {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: auto;
+  align-items: stretch;
+  padding: 25px 0 10px 10px;
+}
+.rodape-div-1, .rodape-div-2, .rodape-div-3 {
+  display: flex;
+  width: calc(100% / 3 - 20px);
+  padding: 10px;
+}
+.rodape span{
+  font-size: 20px;
+  color: #363636;
+}
+.rodape-direitos {
+  width: calc(100% - 20px);
+  background-color: black;
+  padding: 10px;
+  margin: 0px;
+  text-align: center;
+}
+
+/*mobile*/
+@media (max-width: 768px) {
+  .rodape-div-1, .rodape-div-2, .rodape-div-3, .rodape-div-4{
+      width: calc(50% - 20px);
+      padding: 10px;
+  }
+  .rodape-div{
+      padding: 60px 0px 40px 0px;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
