--- a/CSS/style.css
+++ b/CSS/style.css
@@ -147,16 +147,52 @@ nav {
   margin: 0;
 }
 
-.rodape {
+.title-numbers {
+  text-align: center;
   background-color: #f5f5f5;
   color: #363636;
+  font-size: larger;
+  padding: 25px 0;
+}
+
+.numbers-list {
+  list-style: none;
+  padding: 10px 10px;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background-color: #f5f5f5;
+}
+
+.number-item {
+  width: 30%;
+  margin-bottom: 20px;
+  color: #363636;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.number-item h3 {
+  font-size: 17,5px;
+  margin: 0 0 10px 0;
+}
+
+span {
+  color: #2E3094;
+  font-size: 25px;
+}
+
+.rodape {
+  background-color: #363636;
+  color: #f5f5f5;
   height: auto;
   width: 100%;
   font-size: 16px;
 }
 .rodape a {
   text-decoration: none;
-  color: #363636;
+  color: #f5f5f5;
 }
 .rodape p {
   margin-bottom: 5px;
@@ -180,10 +216,11 @@ nav {
 }
 .rodape-direitos {
   width: calc(100% - 20px);
-  background-color: black;
+  background-color: #f5f5f5;
   padding: 10px;
   margin: 0px;
   text-align: center;
+  color: #363636;
 }
 
 /*mobile*/
