--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,7 @@
 
 * {
   margin: 0;
+  padding: 0;
 }
 
 body {
@@ -169,7 +170,7 @@ nav {
   width: 30%;
   margin-bottom: 20px;
   color: #363636;
-  padding: 10px;
+  padding: 10px 0 10px 10pxpx;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -194,9 +195,7 @@ span {
   text-decoration: none;
   color: #f5f5f5;
 }
-.rodape p {
-  margin-bottom: 5px;
-}
+
 .rodape-div {
   display: flex;
   flex-wrap: wrap;
@@ -210,17 +209,16 @@ span {
   width: calc(100% / 3 - 20px);
   padding: 10px;
 }
-.rodape span{
+.rodape span {
   font-size: 20px;
   color: #363636;
 }
 .rodape-direitos {
-  width: calc(100% - 20px);
   background-color: #f5f5f5;
   padding: 10px;
-  margin: 0px;
   text-align: center;
   color: #363636;
+  width: 100%;
 }
 
 /*mobile*/
@@ -234,10 +232,17 @@ span {
   }
 }
 
+
 ::-webkit-scrollbar {
+  background: transparent;
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #727272;
+  background: #D3D1CB;
+}
+
+::-webkit-scrollbar-track {
+  background: #EDECE9;
 }
