--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,12 +7,15 @@
 
 html {
   font-size: 62.5%; 
+  scroll-behavior: smooth;
 }
 
 :root {
   --cor-branco1: #f5f5f5;
   --cor-preto1: #363636;
   --cor-cinza1: #ccc;
+  --cor-azul1: #1D1F5C;
+  --cor-azul2: #2E3192;
 }
 
 body {
@@ -251,16 +254,55 @@ hr {
   list-style-type: none
 }
 
-.aviso1 {
+.schedules {
+  padding: 25px 0;
+}
+
+.title-schedules {
+  text-align: center;
+  color: var(--cor-branco1);
+  font-size: 2.0rem;
+  padding-bottom: 25px;
+}
+
+.our-schedules {
   color: var(--cor-branco1);
   text-align: center;
   font-size: 1.6rem;
   width: 50%;
   line-height: 2.5rem;
   margin-left: 25%;
-  margin-top: 50px;
 }
 
+.technician {
+  background-color: var(--cor-branco1);
+  padding: 25px 0;
+}
+
+.title-technician {
+  text-align: center;
+  color: var(--cor-preto1);
+  font-size: 2.0rem;
+  padding-bottom: 25px;
+}
+
+.our-technician {
+  color: var(--cor-preto1);
+  font-size: 1.6rem;
+  width: 50%;
+  line-height: 2.5rem;
+  margin-left: 25%;
+  padding-bottom: 20px;
+}
+
+.our-technician-li {
+  color: var(--cor-preto1);
+  font-size: 1.6rem;
+  width: 50%;
+  line-height: 2.5rem;
+  margin-left: 40%;
+  padding-bottom: 20px;
+}
 
 .rodape {
   background-color: var(--cor-preto1);
