--- a/CSS/style.css
+++ b/CSS/style.css
@@ -328,6 +328,8 @@ hr {
 .rodape-div-1, .rodape-div-2, .rodape-div-3 {
   display: flex;
   width: calc(100% / 3 - 20px);
+  display: flex;
+  justify-content: center;
   padding: 10px;
 }
 
@@ -345,13 +347,17 @@ hr {
 }
 
 /*mobile*/
-@media (max-width: 768px) {
-  .rodape-div-1, .rodape-div-2, .rodape-div-3, .rodape-div-4{
-      width: calc(50% - 20px);
+@media (max-width: 805px) {
+  .rodape-div-1, .rodape-div-2, .rodape-div-3 {
+      width: 50%;
       padding: 10px;
+      display: block;
+      display: flex;
+      justify-content: center;
+      text-align: center;
   }
   .rodape-div{
-      padding: 60px 0px 40px 0px;
+      padding: 60px 25% 40px 25%;
   }
 }
 
